# ohtu-2021-viikko1

./: .gitignore  .pylintrc  README.md  exc5anotherfile.txt  exc5file.txt  pyproject.toml
dir1/: somefile.txt
dir2/: duubiduu.md  someotherfile.md
src/: varasto.py
src/tests/: varasto_test.py
