[tool.poetry]
name = "varasto"
version = "0.1.0"
description = ""
authors = ["Kalle Ilves <kalle.ilves@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
pylint = "^2.11.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
coverage = "^6.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
